# bibmanager

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
bibmanager/: VERSION.py  __init__.py  __main__.py  ads_manager.py  bib_manager.py  bibm.py  config  config_manager.py  latex_manager.py  utils.py  version.py
bibmanager/ads_manager/: __init__.py  ads_manager.py
bibmanager/bib_manager/: __init__.py  bib_manager.py  browser.py
bibmanager/config_manager/: __init__.py  config_manager.py
bibmanager/examples/: apj_hyperref.bst  sample.bib  sample.tex
bibmanager/latex_manager/: __init__.py  latex_manager.py
bibmanager/pdf_manager/: __init__.py  pdf_manager.py
bibmanager/utils/: __init__.py  utils.py
docs/: Makefile  ads.rst  api.rst  bibtex.rst  conf.py  contributing.rst  faq.rst  getstarted.rst  index.rst  latex.rst  license.rst  make.bat  pdf.rst  readthedocs_requirements.txt
examples/: aastex62.cls  sample.tex  top-apj.tex
tests/: conftest.py  test_ads.py  test_bib_manager.py  test_cli.py  test_config_manager.py  test_latex_manager.py  test_pdf_manager.py  test_utils.py
tests/unit/: test_bib_manager.py  test_latex_manager.py  test_utils.py
